<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otpdynamic">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColor="@color/textColor"
            android:layout_margin="20dp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:clickable="false"
            android:textColor="@color/textColor"
            android:layout_margin="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/signup"
            android:layout_height="wrap_content"
            android:text="@string/registrationlink"
            android:textSize="20dp"
            android:layout_marginLeft="25sp"/>

        <Button
            android:id="@+id/btn_generate_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/generate_otp"
            android:background="@color/colorAccent"
            android:textColor="@color/textColor"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verify_sign_in"
            android:background="@color/colorAccent"
            android:textColor="@color/textColor"
            android:layout_margin="20dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>